portfolio/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portfolio
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-simon-portfolio"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid any 60m;
      add_header X-Cache-Status $upstream_cache_status;
  labels:
    name: ingress-portfolio
spec:
  tls:
  - hosts:
    - simonislam.com
    - www.simonislam.com
    secretName: portfolio-tls
  rules:
  - host: simonislam.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portfolio-service
            port: 
              number: 8080
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: fetcher-service
            port:
              number: 8000
